feat: 完成产品国际化和SEO优化
- 更新界面语言从中文切换到英文，面向全球用户
- 优化HTML meta标签和SEO配置，提升搜索引擎排名
- 重构所有页面组件，统一英文界面和用户体验
- 添加FAQ组件，完善用户帮助文档
- 优化项目描述，突出本地处理和隐私保护特性
- 清理过时的中文文档，整理项目结构
- 更新图标和资源配置，适配国际化需求
- 排除敏感配置文件，确保代码安全

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
-  "description": "完全免费 · 本地处理 · 隐私安全 · 比 TinyPNG 更强大",
+  "description": "Free · Local Processing · Privacy First · More Powerful than TinyPNG",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
